--- a/brevis-integration/app/package.json
+++ b/brevis-integration/app/package.json
@@ -21,6 +21,7 @@
     "dependencies": {
         "brevis-sdk-typescript": "^1.2.5",
         "dotenv": "^16.4.5",
-        "ethers": "^5.5.1"
+        "ethers": "^5.5.1",
+        "web3": "^4.13.0"
     }
 }
